--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Shale Pizzas - just for your Taste!</title>
   </head>
@@ -80,6 +81,44 @@
             </div>
         </header>
 
+
+
+        <div id="banner-slider" class="pt-5">
+            <div class="container">
+                <div class="owl-carousel owl-theme">
+                    <div class="item">
+                        <div class="row">
+                            <div class="col-md-6 my-auto">
+                                <div><h4>Fresh Pizza</h4>
+                                <h1>Italian <span class="color-pink">Spicy Pizza</span></h1>
+                                <p class="py-2">Fattlened base of leavened wheat-based dough topped with tomatoes, Cheese.</p>
+                                <a href="#" class="btn btn-theme">Order Now</a>
+                            </div>    
+                           </div>
+                           <div class="col-md-6">
+                             <img src="img/pizza_italian.png" alt="">
+                           </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="row">
+                            <div class="col-md-6 my-auto">
+                                <div class="pl-3">
+                                <h4>Fresh Pizza</h4>
+                                <h1>Home <span class="color-pink">Bake Pizza</span></h1>
+                                <p class="py-2">Fattlened base of leavened wheat-based dough topped with tomatoes, Cheese.</p>
+                                <a href="#" class="btn btn-theme">Order Now</a>
+                            </div>    
+                           </div>
+                           <div class="col-md-6">
+                             <img src="img/pizza_italian.png" alt="">
+                           </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </section>
 
 
@@ -90,5 +129,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
