--- a/index.html
+++ b/index.html
@@ -89,14 +89,15 @@
                     <div class="item">
                         <div class="row">
                             <div class="col-md-6 my-auto">
-                                <div><h4>Fresh Pizza</h4>
+                                <div class="pl-3">
+                                <h4>Fresh Pizza</h4>
                                 <h1>Italian <span class="color-pink">Spicy Pizza</span></h1>
                                 <p class="py-2">Fattlened base of leavened wheat-based dough topped with tomatoes, Cheese.</p>
                                 <a href="#" class="btn btn-theme">Order Now</a>
                             </div>    
                            </div>
-                           <div class="col-md-6">
-                             <img src="img/pizza_italian.png" alt="">
+                           <div class="col-md-6 my-auto">
+                             <img src="img/pizza_italian.png" alt="" width="100%">
                            </div>
                         </div>
                     </div>
@@ -110,8 +111,23 @@
                                 <a href="#" class="btn btn-theme">Order Now</a>
                             </div>    
                            </div>
-                           <div class="col-md-6">
-                             <img src="img/pizza_italian.png" alt="">
+                           <div class="col-md-6 my-auto">
+                             <img src="img/pizza_italian.png" alt="" width="100%">
+                           </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="row">
+                            <div class="col-md-6 my-auto">
+                                <div class="pl-3">
+                                <h4>Oven Pizza</h4>
+                                <h1>Italian <span class="color-pink">Bake Pizza</span></h1>
+                                <p class="py-2">Fattlened base of leavened wheat-based dough topped with tomatoes, Cheese.</p>
+                                <a href="#" class="btn btn-theme">Order Now</a>
+                            </div>    
+                           </div>
+                           <div class="col-md-6 my-auto">
+                             <img src="img/pizza_italian.png" alt="" width="100%">
                            </div>
                         </div>
                     </div>
